internal/queryfile/testdata/invalid/unknown_cardinality.cypher
// name: StreamPeople :iter
MATCH (p:Person) RETURN p
